# ssg

./: Cargo.toml  README.md
src/: cli.yml  main.rs
src/lib/: cli.yml  commands.rs  filesystem.rs  markdown.rs  mod.rs
src/lib/template/: README.md
src/lib/template/tpl/: template.html
src/lib/template/tpl/static/: style.css
src/template/src/: index.md
src/template/tpl/: index.html  template.html
