[package]
name = "ssg"
version = "0.1.0"
authors = ["Kevin Nobel <kevin@2sk.nl>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2", features = ["yaml"]}
comrak = "0.9"
tinytemplate = "1"
serde = { version = "1", features = ["derive"]}
yaml-rust = "0.4"
